<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:padding="80dp"
        android:background="@drawable/blob"
        android:src="@drawable/permission_camera"
        android:layout_centerInParent="true"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/permission_camera_title"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_below="@id/image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="32dp"
        android:textAlignment="center"
        android:text="@string/permission_camera_description"
        android:layout_centerInParent="true"
        android:layout_below="@+id/title" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:textAllCaps="false"
        android:text="@string/allow_access"
        android:layout_centerInParent="true"
        android:layout_below="@id/description" />

</RelativeLayout>