<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        app:navigationIcon="@drawable/angle_left"
        android:layout_gravity="top">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/btn_create"
                android:layout_centerVertical="true"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:text="@string/create_story" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/create" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginBottom="?android:attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:shapeAppearanceOverlay="@style/Circle"
                app:srcCompat="@drawable/dummy_story_avatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_author_name"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@id/user_avatar"
                app:layout_constraintBottom_toBottomOf="@id/user_avatar"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintStart_toEndOf="@id/user_avatar"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_story_text"
                style="@style/Story.TextInputLayout.OnTertiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/user_avatar">

                <com.mfitrahrmd.component.MyTextInputEditText
                    android:id="@+id/story_text"
                    style="@style/Story.TextInputEditText.OnTertiary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@null"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:background="@android:color/transparent"
                    android:hint="@string/what_s_your_story_today"
                    android:gravity="top|start" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_media"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:elevation="8dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <ImageButton
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/add_image_from_gallery"
            android:paddingVertical="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/gallery"
            app:tint="#06D001"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_camera" />
        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/add_image_from_camera"
            android:paddingVertical="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/camera"
            app:tint="#008DDA"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>